2024-09-18T01:37:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10913982377 # 422
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-18
* notice: last 14d: unq all: 6 1700
* notice: prev accum: outdated-unq outdated-all / unq all: 2218 224407 / 2237 226179
* notice: next accum: outdated-unq outdated-all / unq all: 2219 224535 / 2238 226310
* notice: prev exec diff / last date diff / accum: unq all: +1 +131 -0 -75 / +1 +129 -0 -0 / 1 129
* notice: removed / changed dates: [2024-09-03] / [2024-09-04 2024-09-16 2024-09-17]

2024-09-17T01:15:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10894768445 # 421
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-17
* notice: last 14d: unq all: 6 1697
* notice: prev accum: outdated-unq outdated-all / unq all: 2217 224279 / 2236 226051
* notice: next accum: outdated-unq outdated-all / unq all: 2218 224407 / 2237 226179
* notice: prev exec diff / last date diff / accum: unq all: +1 +128 -0 -75 / +1 +126 -0 -0 / 1 126
* notice: removed / changed dates: [2024-09-02] / [2024-09-03 2024-09-15 2024-09-16]

2024-09-16T01:42:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10876208777 # 420
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
* notice: last 14d: unq all: 6 1697
* notice: prev accum: outdated-unq outdated-all / unq all: 2216 224151 / 2233 225945
* notice: next accum: outdated-unq outdated-all / unq all: 2217 224279 / 2236 226051
* notice: prev exec diff / last date diff / accum: unq all: +3 +106 -0 -75 / +3 +106 -0 -0 / 3 106
* notice: removed / changed dates: [2024-09-01] / [2024-09-02 2024-09-15]

2024-09-15T01:09:41Z: