@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-09-19T01:39:09Z",
-  "count" : 96,
-  "count_minmax" : [ 96, 128 ],
-  "count_decinc" : [ -64, +160 ],
+  "count" : 126,
+  "count_minmax" : [ 126, 126 ],
+  "count_decinc" : [ -0, +126 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
