@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2024-09-18T01:37:21Z",
-  "count_outdated" : 224535,
-  "uniques_outdated" : 2219,
-  "count" : 226310,
-  "uniques" : 2238,
+  "timestamp" : "2024-09-19T01:39:09Z",
+  "count_outdated" : 224663,
+  "uniques_outdated" : 2220,
+  "count" : 226404,
+  "uniques" : 2239,
   "clones" : [
     {
-      "timestamp": "2024-09-04T00:00:00Z",
+      "timestamp": "2024-09-05T00:00:00Z",
       "count": 53,
       "count_minmax": [ 53, 128 ],
       "count_decinc": [ 75, 128 ],
@@ -15,19 +15,10 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2024-09-05T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-09-06T00:00:00Z",
-      "count": 128,
+      "count": 96,
       "count_minmax": [ 96, 128 ],
-      "count_decinc": [ 32, 160 ],
+      "count_decinc": [ 64, 160 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +118,15 @@
       "count": 129,
       "count_minmax": [ 129, 129 ],
       "count_decinc": [ 0, 129 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-18T00:00:00Z",
+      "count": 126,
+      "count_minmax": [ 126, 126 ],
+      "count_decinc": [ 0, 126 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
