@@ -1,20 +1,15 @@
 {
-  "count": 1700,
+  "count": 1666,
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2024-09-04T00:00:00Z",
+      "timestamp": "2024-09-05T00:00:00Z",
       "count": 53,
       "uniques": 1
     },
     {
-      "timestamp": "2024-09-05T00:00:00Z",
-      "count": 128,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-09-06T00:00:00Z",
-      "count": 128,
+      "count": 96,
       "uniques": 1
     },
     {
@@ -70,6 +65,11 @@
     {
       "timestamp": "2024-09-17T00:00:00Z",
       "count": 129,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-18T00:00:00Z",
+      "count": 126,
       "uniques": 1
     }
   ]
